[metadata]
name = TCRcloud
version = 1.2.2
author = Eric de Sousa
author_email = eric.desousa@research.fchampalimaud.org
description = TCRcloud is a TCR repertoire visualization and comparison tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oldguyeric/TCRcloud
project_urls =
    Bug Tracker = https://github.com/oldguyeric/TCRcloud/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    airr
    numpy >=1.9.2
    scipy >=1.3.0
    matplotlib
    wordcloud
    pandas
    scikit-learn
    scikit-bio
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    TCRcloud = tcrcloud.TCRcloud:main